--- a/src/app/gerar-avaliacao/gerar-avaliacao.component.html
+++ b/src/app/gerar-avaliacao/gerar-avaliacao.component.html
@@ -38,4 +38,23 @@
 
     <ion-button type="submit">Salvar Avaliação</ion-button>
   </form>
+
+  <!-- Mostrar fotos -->
+  <ion-list *ngIf="avaliacao.fotos.length > 0">
+    <ion-item>
+      <ion-label><strong>Fotos:</strong></ion-label>
+    </ion-item>
+    <ion-item *ngFor="let foto of avaliacao.fotos">
+      <img [src]="foto" style="width: 100%; height: auto;">
+    </ion-item>
+  </ion-list>
+
+  <!-- Mostrar vídeo -->
+  <ion-item *ngIf="avaliacao.video">
+    <ion-label><strong>Vídeo:</strong></ion-label>
+    <video controls style="width: 100%; height: auto;">
+      <source [src]="avaliacao.video" type="video/mp4">
+      Seu navegador não suporta o elemento de vídeo.
+    </video>
+  </ion-item>
 </ion-content>
