--- a/src/app/gerar-avaliacao/gerar-avaliacao.component.html
+++ b/src/app/gerar-avaliacao/gerar-avaliacao.component.html
@@ -40,14 +40,12 @@
   </form>
 
   <!-- Mostrar fotos -->
-  <ion-list *ngIf="avaliacao.fotos.length > 0">
-    <ion-item>
-      <ion-label><strong>Fotos:</strong></ion-label>
-    </ion-item>
-    <ion-item *ngFor="let foto of avaliacao.fotos">
-      <img [src]="foto" style="width: 100%; height: auto;">
-    </ion-item>
-  </ion-list>
+  <ion-item *ngIf="avaliacao.fotos.length > 0">
+    <ion-label><strong>Fotos:</strong></ion-label>
+    <div *ngFor="let foto of avaliacao.fotos" style="display: flex; justify-content: center; margin: 5px 0;">
+      <img [src]="'data:image/jpeg;base64,' + foto" style="max-width: 100%; height: auto; object-fit: contain;">
+    </div>
+  </ion-item>
 
   <!-- Mostrar vídeo -->
   <ion-item *ngIf="avaliacao.video">
