add more images to form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>App Avaliação</ion-title>
+      <ion-title>Avaliação Veicular</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-app>
